# msp-go

./: .env.example  .gitignore  AGENTS.md  README.md  design-qa.md  docker-compose.prod.yml  nginx-site-split.conf  nginx-site.conf  start.bat
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_merged.py  0002_system_settings.py  0003_security_logs.py  0004_user_favorites.py  0005_performance_indexes.py  0006_xidian_integration.py  0007_xidian_cookie_persist.py  0008_additional_indexes.py  0009_student_portrait_fields.py  0010_nullable_max_tokens_top_p.py  0011_class_management.py  0012_knowledge_graph_seed_data.py  0013_cleanup_agent_types.py  0014_password_reset_requests.py  0015_mistake_book_indexes.py  0016_fix_errortype_enum_values.py  0017_fix_diagnosis_cascade_delete.py  0018_add_bkt_tables.py  0019_performance_indexes_phase3.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/core/: __init__.py  base.py  cache.py  llm_client.py  math_equivalence.py  queue.py  router.py  state.py  utils.py
backend/app/agents/roles/: diagnostician.py  math_solver.py  tracker.py  tutor.py
backend/app/agents/tools/: __init__.py  resource_tools.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  exception_handlers.py  json_utils.py  log_sanitizer.py  password_validator.py  resilience.py  security.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/integrations/: __init__.py
backend/app/services/: __init__.py  admin_stats_service.py  admin_user_service.py  ai_config_service.py  alert_service.py  auth_service.py  bkt_service.py  class_service.py  content_service.py  database_management_service.py  encryption_service.py  exercise_service.py  health_checker.py  knowledge_admin_service.py  log_cleanup_service.py  mistake_service.py  password_reset_service.py  progress_service.py  qiniu_storage_service.py  question_ai_service.py  resource_service.py  security_log_service.py  session_service.py  student_portrait_service.py  system_setting_service.py  task_manager.py  upload_service.py  xidian_service.py
backend/scripts/: init-db.sh  memory_gate.py  memory_probe.py  memory_probe_lib.py  migrate_storage.py  seed_exercises.py
backend/tests/: conftest.py  test_answer_types.py
backend/tests/api/: __init__.py  test_health.py
backend/tests/unit/: test_agent_utils.py  test_ai_config.py  test_bkt.py  test_exercise.py  test_math_equivalence.py  test_math_solver.py  test_questions_api.py  test_resource_repository.py  test_resource_tools.py  test_router.py  test_session_resource_recommendations.py  test_student.py  test_workflow_nodes.py  test_xidian_service_ehall_login.py
docs/: README.md  (+5 more)
(+674 files in other folders)
