[project]
name = "math-study-platform"
version = "0.1.0"
description = "高等数学智能学习平台后端服务"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MathStudyPlatform Team" }]

dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # 数据库
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.14.0",

    # Redis
    "redis>=5.2.0",
    "hiredis>=2.3.0",

    # 向量检索
    "pgvector>=0.3.0",

    # 数据验证
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.1.0",

    # 安全/认证
    "PyJWT[crypto]>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=46.0.5",

    # HTTP 客户端
    "httpx>=0.28.0",

    # 监控
    "prometheus-client>=0.21.0",

    # 工具
    "python-dotenv>=1.0.0",

    # 对象存储
    "qiniu>=7.13.0",        # 七牛云对象存储
    "boto3>=1.35.0",        # AWS S3 SDK (支持所有 S3 兼容服务)

    # SSE
    "sse-starlette>=2.0.0",

    # 高性能 JSON 序列化
    "orjson>=3.10.0",
]

[project.optional-dependencies]
# AI/Agent 相关依赖
ai = [
    # LiteLLM - 统一 LLM 调用接口（替代 langchain-openai）
    "litellm>=1.30.0",

    # LangChain 核心（保留用于消息类型和工具）
    "langchain-core>=1.2.11",
    "langchain-text-splitters>=0.3.0",

    # LangGraph 工作流
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=1.0.0",
    "langgraph-checkpoint-postgres>=1.0.0",

    # LLM 提供商（LiteLLM 依赖）
    "openai>=1.55.0",

    # 数学计算
    "sympy>=1.13.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",

    # 文本处理
    "tiktoken>=0.7.0",

    # 图像处理 (OCR)
    "pillow>=12.1.1",
    "pytesseract>=0.3.10",

    # 数据处理
    "pandas>=2.1.0",
]

# 开发依赖
dev = [
    # 测试
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "faker>=24.0.0",

    # 代码质量
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",

    # 类型存根
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",

    # 调试
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # 行长度由 formatter 处理

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
